<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adiguzel.anil.kochisstteil.CombinationAdd"
    android:weightSum="1">


    <TextView
        android:id="@+id/MainMenuDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Combination_MainMenu"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Spinner
        android:layout_marginTop="15dp"
        android:layout_below="@id/MainMenuDesc"
        android:id="@+id/MainMenuAddSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
    android:id="@+id/SubMenuDesc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_Combination_SubMenu"
    android:textSize="14sp"
    android:textStyle="bold" />


    <Spinner
        android:layout_marginTop="15dp"
        android:layout_below="@id/SubMenuDesc"
        android:id="@+id/SubMenuAddSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/DesertDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Combination_Desert"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Spinner
        android:layout_marginTop="15dp"
        android:layout_below="@id/DesertDesc"
        android:id="@+id/DesertAddSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/SaladDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Combination_Salad"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Spinner
        android:layout_marginTop="15dp"
        android:layout_below="@id/SaladDesc"
        android:id="@+id/SaladAddSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/SoupDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Combination_Soup"
        android:textSize="14sp"
        android:textStyle="bold" />


    <Spinner
        android:layout_marginTop="15dp"
        android:layout_below="@id/DesertDesc"
        android:id="@+id/SoupAddSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/TotalDurationDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Combination_Total_Duration"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/TotalDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NULL"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/MenuNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_Combination_Menu_Name"/>

    <Button
        android:onClick="addCombination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddMainMenu"
        android:text="@string/Add_Combination_Button"/>


</LinearLayout>
