<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adiguzel.anil.kochisstteil.MainMenuAdd">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/add_Menu"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/add_Menu_recipe"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:minLines="1"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300dp"
                    android:ems="10"
                    android:hint="@string/add_Menu_Duration"
                    android:inputType="number"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="MainMenuAdd"
                    android:text="@string/add_Menu_Button"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
