<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbackground"
    tools:context="com.adiguzel.anil.kochisstteil.Login">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="660dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/loginbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginbackground"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="296dp"
                    android:contentDescription=""
                    app:srcCompat="@drawable/logo2"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/ic_email_white_24dp"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/login_email"
                        android:inputType="textEmailAddress"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColor="@android:color/background_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/ic_vpn_key_white_24dp" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2.47"
                        android:ems="10"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColor="@android:color/background_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@color/loginbackground"
                        android:backgroundTintMode="@color/loginbuttonbackground"
                        android:text="@string/login_buton"
                        android:onClick="login"
                        android:textColor="@android:color/background_light" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/login_register"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="register"
                        android:clickable="true"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
